# gothic-organizer-rs

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: LOGIC_INTERACTIONS.md  README.md  implementation.md  overview.md  window.md
src/: app.rs  application.rs  config.rs  constants.rs  editor.rs  error.rs  helpers.rs  logger.rs  macros.rs  main.rs  profile.rs  startup_window.rs
src/app/: handlers.rs  message.rs  session.rs  state.rs  window.rs
src/core/: constants.rs  helpers.rs  logic.rs  lookup.rs  mod.rs  profile.rs  services.rs  utils.rs
src/core/logic/: app_lifecycle.rs  mod.rs  mod_management.rs  profile_management.rs  ui_logic.rs
src/core/services/: context.rs  mod.rs  mod_service.rs  mods.rs  profile.rs  profile_service.rs  session.rs  session_service.rs  ui.rs  ui_service.rs
src/cutstom_widgets/: clickable_text.rs  mod.rs
src/gui/: app.rs  conflicts.rs  editor.rs  editor_view.rs  helpers.rs  logs.rs  mod.rs  options.rs  options_view.rs  overwrites.rs
src/gui/custom_widgets/: clickable_text.rs  mod.rs
src/gui/editor/: files.rs  header.rs  mods.rs  profile.rs
src/gui/options/: about.rs  config.rs  launch.rs  menu.rs
