[package]
name = "gothic-organizer-rs"
version = "0.9.5"
edition = "2024"
authors = ["Zira3l137"]
repository = "https://github.com/Zira3l137/gothic-organizer-rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
iced_core = "0.13.1"
iced = { version = "0.13.1", features = ['svg', 'image', 'advanced'] }
rfd = "0.15.3"
hashbrown = "0.15.3"
ahash = "0.8.12"
ignore = "0.4.23"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.40", features = ["derive"] }
zip = "4.2.0"
boolinator = "2.4.0"

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = "fat"
opt-level = "s"
debug-assertions = false
debug = false
