[package]
name = "gothic-organizer-rs"
version = "0.9.5"
edition = "2024"
authors = ["Zira3l137"]
repository = "https://github.com/Zira3l137/gothic-organizer-rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.18.0", features = ["v4"] }
iced_core = "0.13.1"
iced = { version = "0.13.1", features = ['svg', 'image', 'advanced'] }
rfd = "0.15.3"
hashbrown = "0.16"
ahash = "0.8.12"
ignore = "0.4.23"
clap = { version = "4.5.40", features = ['derive'] }
zip = "4.2.0"
boolinator = "2.4.0"
chrono = { version = "0.4.41", features = ['serde'] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ['env-filter'] }

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = "fat"
opt-level = "s"
debug-assertions = false
debug = false
